Avoid double deleting from |MediaStreamDispatcher::label_stream_map_|. MediaStreamDispatcher::OnDeviceStopped() may delete the same element twice from |label_stream_map_| and causes the crash.

BUG=616884

Review-Url: https://codereview.chromium.org/2035993002
Cr-Commit-Position: refs/heads/master@{#398075}

Former-commit-id: c4ef1a4e478937783c303b8a712e9fef0457ac60